<resources>
    <string name="app_name">Ice5</string>
    <string name="message_notification">Mỗi ngày với 5 từ mới tiếng anh nào.</string>
    <string name="text_summary">Tatistics</string>
    <string name="text_quest">Quest</string>
    <string name="text_setting">Settings</string>
    <string name="level">Cấp độ</string>
    <string name="topic">Chủ đề</string>
    <string name="change">Thay đổi</string>
    <string name="topics">Các chủ đề</string>
    <string name="levels">Các cấp độ</string>
    <string name="setting">Thiết đặt</string>
    <string name="quest">Nhiệm vụ</string>
    <string name="word">từ</string>
    <string name="day">ngày</string>
    <string name="you_have_done_well">Làm tốt lắm!\nBạn làm tốt với %d từ!</string>
    <string name="choose_word_for_to_day">Hãy chọn %d từ để học vào hôm nay!</string>
    <string name="choose_word_for_tomorrow">Hãy chọn %d từ để học vào ngày mai!</string>
    <string name="dont_like_at_all">Tôi không thích</string>
    <string name="word_is_ready_to_repeat">%d từ đang đợi để bạn lặp lại!</string>
    <string name="format_more_practice_word">Chúng ta có %d từ trong từ điển\nChúng ta sẽ lặp lại nó chứ?</string>
    <string name="to_day_is_your_day">Hôm nay là ngày %s của bạn</string>
    <string name="skip">Bỏ qua</string>
    <string name="done_the_quest">Bạn thật tuyệt!\nHôm nay bạn đã làm rất tốt.</string>
    <string name="the_trial">Thời gian dùng thử còn</string>
    <string name="term_of_service">Điều khoản sử dụng</string>
    <string name="choose_word_config">Chọn bao nhiêu từ để học mỗi ngày tùy theo ý muốn của bạn</string>
    <string name="my_all_word">Xem tất cả các từ</string>
    <string name="all_word">Tất cả các từ</string>
    <string name="word_of_day">Các từ trong ngày</string>
    <string name="word_has_learn">\ntừ đã học</string>
    <string name="speed_unit">\ntừ mỗi ngày</string>
    <string name="complete_quest">Hoàn tất các nnhiệm vụ để học các từ</string>
    <string name="word_is_waiting">Đang chờ các từ đầu tiên được học</string>
    <string name="contact">Liên hệ nhà phát triển</string>
    <string name="config">Trình độ và sở thích</string>
    <string name="notification">Bật thông báo</string>
    <string name="confirm_continue">Chúng ta sẽ lặp lại chứ?</string>\
    <string name="read_and_scroll">Đọc cẩn thận\nsau đó thực hành</string>
    <string name="choose_answer">Chọn dịch đúng</string>
    <string name="fill_the_space">Điền vào chỗ trống</string>
    <string name="listen_and_fill">Nghe và điền từ</string>
    <string name="title_master_a_part_words">Bạn thật tuyệt!\nChúng ta đã luyện tập thêm %d từ nữa.</string>
    <string name="title_master_a_part_words_1">Hay quá\n%1$d trên %2$d từ là rất tốt.</string>
    <string name="title_master_a_part_words_2">Làm tốt đấy!\nChúng ta sẽ luyện tập với %d từ tiếp theo.</string>
    <string name="title_master_a_part_words_3">Làm tốt đấy!\nChúng ta sẽ luyện tập với %d từ còn lại.</string>
    <string name="title_master_all_word">Làm tốt đấy\nBạn làm tốt với %d từ!</string>

    <string name="confirm_practice">Hãy dành 30 giây để kiểm tra xem chúng ta đã nhớ hết tất cả chưa</string>
    <string name="start_of_day_reading">Hãy tiếp tục và bắt đầu buổi sáng của bạn với một chút tiếng anh - Đó là vô giá!</string>
    <string name="like_app">Bạn có thích ứng dụng của chúng tôi?</string>
    <string name="unlike">Tôi không thực sự thích nó</string>
    <string name="i_like">Tôi thích nó</string>
    <string name="we_like_you">Cảm ơn bạn!\nChúng tôi cũng thích bạn :)</string>
    <string name="say_thank_store">Nói cảm ơn trong app store</string>
    <string name="repeat_old_word">Chúng ta hãy làm việc với các từ đã học trước đây</string>
    <string name="msg_buy_inapp">Khuyến mãi có thể hết bất cứ lúc nào. Hãy chọn một kế hoạch để tiếp tục</string>
    <string name="msg_buy_inapp_1">Đăng ký của bạn đã hết hạn. Vui lòng chọn một kế hoạch để tiếp tục</string>
    <string name="your_level">Chọn trình độ anh ngữ của bạn</string>
    <string name="your_favorite">Chọn sở thích học tập của bạn</string>
    <string name="msg_intro_1_0">Từ ngữ là nền tảng của ngôn ngữ. Chúng ta sẽ bắt đầu với các từ đơn giản, và bạn sẽ nhanh chóng đạt đến cấp độ mới</string>
    <string name="msg_intro_1_1">Không còn là người mới học? Vậy đã đến lúc bạn tìm hiểu một vài từ thực sự hữu ích và thường xuyên dùng.</string>
    <string name="msg_intro_1_2">Bạn không thể nào hiểu tiếng Anh 100%. Luôn có những từ mới để học.</string>
    <string name="intro_2">Hãy học 8 từ mỗi ngày, và bạn sẽ ghi nhớ hơn 200 từ trong vòng một tháng.</string>
    <string name="intro_3">Phương pháp trọng tâm là "Fast Brain" và kỹ thật lặp lại với khoảng cách tăng dần.</string>
    <string name="intro_4">Ứng dụng này sẽ thích nghi với sở thích, kết quả và thói quen luyện tập của bạn.</string>
    <string name="active_trial">Kích hoạt thời gian dùng thử.\nBạn có thể hủy bất cứ lúc nào.</string>
    <string name="do_fast_test">Hãy làm bài trắc nghiệm nhanh \nđể tạo chương trình học \ncủa riêng bạn</string>
    <string name="doing_plan">Đang tạo chương trình học cá nhân</string>
    <string name="intro_1_1">Từ vựng là nền tảng của ngôn ngữ. Chúng ta hãy bắt đầu với các từ đơn giản, và bạn sẽ nhanh chóng đạt đến cấp độ mới.</string>
    <string name="please_open_link">Xin vui lòng mở đường dẫn để xem phiên bản mới nhất</string>
    <string name="extend_subscribe">Gia hạn đăng kí</string>
    <string name="content_term">Hot 8 cung cấp một tùy chọn đăng kí chính 9,99$ mỗi tháng.\n\nKhoản thanh toán sẽ được tính vào tài khoản play store khi bạn xác nhận mua hàng.\n\nĐăng kí sẽ tự động gia hạn trừ phi bạn tắt tự động gia hạn ít nhất 24 giờ trước khi kết thúc kì hạn hiện thời.\n</string>
    <string name="choose">Chọn</string>
    <string name="timer_of_service">Giảm giá sẽ hết hạn trong</string>
    <string name="select_your_language">Chọn ngôn ngữ của bạn</string>
    <string name="do_more_practice">Tôi sẽ thực hành thêm</string>
    <string name="no">Không</string>
    <string name="yes_">Có</string>
    <string name="start_">Bắt đầu</string>
    <string name="skip_test">Bỏ qua bài kiểm tra</string>
    <string name="do_test">Bắt đầu bài kiểm tra</string>
    <string name="format_word_to_learn">%s từ đã sẵn sàng để bạn học</string>
    <string name="msg_detect_challenge_word">Đã phát hiện thêm %d từ thách thức</string>
    <string name="do_repeat">Lặp lại từ</string>
    <string name="speed_of_memory">Tốc độ ghi nhớ</string>
    <string name="speed_text">Tốc độ ghi nhớ</string>
    <string name="read_out_loud">Hào! hãy đọc to nó</string>
    <string name="word_have_been_learn">từ đã học</string>
    <string name="word_have_learning">từ đang học</string>
    <string name="practice">Thực hành</string>
    <string name="to_go_store">Tùy chọn mua hàng</string>
    <string name="recover_buying">Khôi phục mua hàng</string>
    <string name="your_week_schedule">Lịch học trong tuần của bạn</string>
    <string name="restore_buying">Khôi phục mua hàng</string>
    <!-- For views -->
    <string name="to_day">Hôm nay</string>
    <string name="i_dont_know">Tôi không biết</string>
    <string name="has_choose">Đã chọn </string>
    <string name="in_all_of"> trong số </string>
    <string name="choice_word">Chọn từ mới</string>
    <string name="unchoice">Bỏ chọn</string>
    <string name="msg_test_result">Bạn đã hoàn thành bài kiểm tra với kết quả %d%%</string>
    <string name="msg_suggest_level">Chúng ta có thể bắt đầu với\ncấp độ %s</string>
    <string name="msg_match_level">Cảm ơn bạn! bây giờ chương trình học tập của bạn sẽ trở nên hiệu quả hơn rất nhiều.</string>
    <string name="yes_start">Có! Bắt đầu!</string>
    <string name="the_trial_gone">Thời gian dùng thử của bạn đã hết</string>
    <string name="keep_level_select">Giữ cấp độ %s</string>
    <string name="next">Tiếp tục</string>
    <string name="_1_month">1 Tháng</string>
    <string name="_1_week">1 Tuần</string>
    <string name="_6_month">6 Tháng</string>
    <string name="extra_save_1_week">Giảm còn 70%</string>
    <string name="extra_save_1_month">Giảm còn 60%</string>
    <string name="extra_save_6_month">Giảm còn 50%</string>
    <string name="forever">Mãi mãi</string>
    <string name="extra_save_2_year">Giảm còn 40%</string>
    <string name="keep_go_on">Tiếp</string>
    <string name="un_pick">Bỏ chọn</string>
    <string name="have_to_choose">Bạn phải chọn một trong các cấp độ ở trên để có thể tiếp tục.</string>
    <string name="error">Lỗi!</string>
    <string name="network_error">Vui lòng bật wifi để ứng dụng có thể tiếp tục hoạt động.</string>
    <string name="free">miễn phí!</string>
    <string name="day_7">7 ngày</string>
    <string name="active">Kích hoạt</string>
    <string name="get_ready">Chuẩn bị sẵn sàng!</string>
    <string name="easy">easy</string>
    <string name="curious">curious</string>
    <string name="smart">smart</string>
    <string name="clever">clever</string>
    <string name="reliable">reliable</string>
    <string name="passion">passion</string>
    <string name="test">Kiểm tra</string>
    <string name="unknown">Tôi không biết</string>
    <string name="msg_detect_challenge">đã phát hiện %d từ thách thức</string>
    <string name="in_a_week">trong một tuần</string>
    <string name="in_a_month">trong một tháng</string>
    <string name="statistical">Thống kê</string>
    <string name="select_word">Chọn từ</string>
    <string name="msg_finish_create_plan">Chương trình học đã sẵn sàng, hãy bắt đầu nào!</string>
    <string name="format_change_level">Cấp độ: %1$s, %2$d chủ đề</string>
    <string name="format_choice_word">Đã chọn %1$d trong số %2$d</string>
    <string name="great">Tuyệt vời!</string>
    <string name="title_buy_vip_1">Ice5 biết thời điểm hoàn hảo để lặp lại mỗi từ</string>
    <string name="msg_buy_vip_1">và xem xét điều này khi tạo chương trình học của bạn!</string>
    <string name="title_buy_vip_2">Bạn sẽ học hơn 50 từ mới trong tuần đầu tiên của chương trình</string>
    <string name="msg_buy_vip_2">và bạn sẽ nhớ chúng\nmãi mãi!</string>
    <string name="remember">Ghi nhớ!</string>
    <string name="contact_dev_content">Hot8 được phát triển bởi team SkyX trong start up Magiklab.\n\nMọi thắc mắc và góp ý xin liên hệ theo các thông tin dưới dây:\n\nĐịa chỉ: Khu công nghệ phần mềm Đại học Quốc gia TP.HCM - Khu phố 6, Phường Linh Trung, Quận Thủ Đức, TP Hồ Chí Minh, Việt Nam.\n\nNgười liên hệ: Anh Nguyễn Văn Hướng\n\nSđt: +84 962385655\nEmail: huongnv.magik.vn\n

    </string>
</resources>
