<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view_practive_word"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorRobinEggBlue"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <vn.magik.hot8.customviews.CustomTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:lines="2"
            android:text="@string/title_buy_vip_1"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:font="Trebuchet.ttf" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <vn.magik.hot8.customviews.AutoResizeTextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:lines="2"
            android:text="@string/msg_buy_vip_1"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:font="Trebuchet.ttf" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <vn.magik.hot8.customviews.AutoResizeTextView
            android:id="@+id/tv_great"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/plate"
            android:gravity="center"
            android:lines="1"
            android:minWidth="150dp"
            android:text="@string/great"
            android:textAllCaps="false"
            android:textColor="@color/colorRobinEggBlueDark"
            android:textSize="16sp"
            app:font="Trebuchet.ttf" />
    </LinearLayout>
</LinearLayout>