<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:textColor="@color/colorWhiteSmoke">

    <vn.magik.hot8.customviews.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/level"
        android:textSize="20sp"
        app:font="Trebuchet.ttf" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp">

        <com.github.lzyzsd.circleprogress.DonutProgress
            android:id="@+id/donut_progress_level"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            app:donut_circle_starting_degree="270"
            app:donut_finished_color="@color/green"
            app:donut_finished_stroke_width="8dp"
            app:donut_progress="25"
            app:donut_show_text="false"
            app:donut_unfinished_color="@color/gray"
            app:donut_unfinished_stroke_width="8dp" />

        <vn.magik.hot8.customviews.CustomTextView
            android:id="@+id/tv_level_content"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/complete_quest"
            android:textColor="@color/colorBlackLight"
            app:font="Trebuchet.ttf" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <vn.magik.hot8.customviews.CustomTextView
                android:id="@+id/tv_word_per_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="--"
                android:textColor="@color/green"
                android:textSize="20sp"
                app:font="Trebuchet.ttf" />

            <vn.magik.hot8.customviews.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/in_a_week"
                android:textAlignment="center"
                android:textColor="@color/colorBlackLight"
                app:font="Trebuchet.ttf" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="16dp"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <vn.magik.hot8.customviews.CustomTextView
                android:id="@+id/tv_word_per_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="--"
                android:textColor="@color/green"
                android:textSize="20sp"
                app:font="Trebuchet.ttf" />

            <vn.magik.hot8.customviews.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/in_a_month"
                android:textColor="@color/colorBlackLight"
                app:font="Trebuchet.ttf" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />


    <vn.magik.hot8.customviews.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/speed_of_memory"
        android:textColor="@color/colorBlackLight"
        android:textSize="20sp"
        app:font="Trebuchet.ttf" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp">

        <com.github.lzyzsd.circleprogress.ArcProgress
            android:id="@+id/arc_progress_speed"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            app:arc_angle="270"
            app:arc_finished_color="@color/green"
            app:arc_progress="30"
            app:arc_stroke_width="10dp"
            app:arc_text_color="@color/white"
            app:arc_unfinished_color="@color/gray" />

        <vn.magik.hot8.customviews.CustomTextView
            android:id="@+id/tv_speed_content"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/word_is_waiting"
            app:font="Trebuchet.ttf" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />
</LinearLayout>
